[metadata]
name = metrix
description = Metrics tracking through streams.
maintainer = Burton DeWilde
maintainer_email = burtdewilde@gmail.com
license = MIT
license_files =
    LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
keywords =
    metrics
    streams
url = https://github.com/bdewilde/metrix
project_urls =
    Source Code = https://github.com/bdewilde/metrix
    Bug Tracker = https://github.com/bdewilde/metrix/issues

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    streamz>=0.5.5
    toolz>=0.11.0

[options.packages.find]
where = src

[options.extras_require]
viz =
    networkx>=1.5.0
    graphviz
dev =
    black>=19.0b0,<20.8b0
    flake8>=3.8.0
    mypy>=0.600
    sphinx>=3.0.0,<4.0.0
    pytest>=6.0.0
    pytest-cov>=2.6.0
    twine>=3.0.0
    wheel>=0.33.5

[flake8]
exclude = .git,.github,__pycache__,build,dist,docs,tests
ignore = E203,W503
max-line-length = 88
statistics = True
per-file-ignores =
    src/**/__init__.py:F401
